--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 **/solar/__pycache__/
+**/authentication/__pycache__/
 *.py[cod]
 *$py.class
 node_modules/
