--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.23",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.8"
+    "postcss-cli": "^11.0.0"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.0.9",
+    "tailwindcss": "^3.4.17"
   }
 }
