--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.23",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.8"
+    "postcss": "^8.5.3"
+  },
+  "dependencies": {
+    "tailwindcss": "^3.4.17"
   }
 }
