--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "daisyui": "^4.12.23",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.8"
+  },
+  "dependencies": {
+    "@tailwindcss/cli": "^4.0.8"
   }
 }
