--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,4 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 django-cors-headers==4.0.0
 djangorestframework-simplejwt[crypto]
+django-extensions==3.2.3
