--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,18 +22,18 @@ jobs:
         python-version: 3.13.1
 
     - name: Install dependencies
-      run: 
+      run: |
         python -m venv venv
         source venv/bin/activate
         pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Run migrations
-      run:
+      run: |
         source venv/bin/activate
         python manage.py migrate
     
     - name: Run tests
-      run:
+      run: |
         source venv/bin/activate
         python manage.py test
