--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 __pycache__/
 **/solar/__pycache__/
 **/authentication/__pycache__/
+**/migrations/__pycache__/
 *.py[cod]
 *$py.class
 node_modules/
