--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "description": "",
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "daisyui": "^4.12.23",
+    "daisyui": "^5.0.28",
     "postcss": "^8.5.3",
-    "postcss-cli": "^11.0.0"
+    "postcss-cli": "^11.0.0",
+    "tailwindcss": "^3.4.17"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.9",
-    "tailwindcss": "^3.4.17"
+    "@tailwindcss/cli": "^4.1.4",
+    "@tailwindcss/vite": "^4.0.9"
   }
 }
