--- a/requirements.txt
+++ b/requirements.txt
@@ -3,25 +3,23 @@ certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 cryptography==44.0.1
-Django==5.1.6
+Django==5.2
 django-allauth==65.4.1
 django-cors-headers==4.0.0
 django-extensions==3.2.3
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.0
+django-tailwind==4.0.1
+djangorestframework==3.15.2
+djangorestframework_simplejwt==5.5.0
 idna==3.10
 oauthlib==3.2.2
+pillow==11.2.1
 pycparser==2.22
-PyJWT==2.10.1
+PyJWT==2.9.0
 python-dotenv==1.0.1
 pytz==2025.1
 requests==2.32.3
 requests-oauthlib==2.0.0
-setuptools==75.8.2
 sqlparse==0.5.3
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
-django-cors-headers==4.0.0
-djangorestframework-simplejwt[crypto]
-django-extensions==3.2.3
